<resources>

    <string name="all_cancel">Cancel</string>
    <string name="all_name_wechat">WeChat</string>
    <string name="all_name_wxcircle">WeChat Circle</string>
    <string name="all_name_qq">QQ</string>
    <string name="all_name_qzone">Qzone</string>
    <string name="all_name_ding">DingDing</string>

    <string name="all_qr_long_press_tips">Long press to identify the QR code to read the article.</string>
</resources>